src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/variableDefinition.sol
contract test {
  function fun(uint256 a) {
    var b;
    uint256 c;
    mapping(address=>bytes32) d;
    customtype varname;
  }
}
