src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/variableDefinitionInMapping.sol
contract test {
  function fun() {
    mapping(var=>bytes32) d;
  }
}